2011-08-28  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-fonts.el
	(c-make-font-lock-BO-decl-search-function): New function.
	(c-basic-matchers-after - "Fontify the clauses after various
	keywords"): Extract the three keyword lists for the 3 erroneous
	constructs from the list of four, and use the new function above
	in place of an old one.

2011-08-28  Deniz Dogan  <deniz@dogan.se>

	* net/rcirc.el (rcirc-insert-prev-input)
	(rcirc-insert-next-input): Remove unused argument.

2011-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* shell.el (shell-parse-pcomplete-arguments): Unquote args (bug#9160).

2011-08-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-menus.el (cc-imenu-c++-generic-expression): Make it
	handle function pointer parameters properly.

2011-08-27  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-reuse-window): Fix case where
	selected window was reused with non-nil OTHER-WINDOW argument.
	(Bug#9381)

2011-08-27  Deniz Dogan  <deniz@dogan.se>

	* net/rcirc.el (rcirc-check-auth-status): Adding support for
	oftc's NickServ messages.

2011-08-27  Glenn Morris  <rgm@gnu.org>

	* saveplace.el (save-place-limit): Make it finite.  (Bug#9352)

2011-08-26  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package-install): Call package-initialize
	if called interactively.

2011-08-26  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/cl-macs.el (defstruct): Fix format.  (Bug#9357)

2011-08-25  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-occur): Let-bind `search-spaces-regexp' to
	`search-whitespace-regexp' (bug#9364).

2011-08-25  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-edit-string): Let-bind `search-ring' and
	`regexp-search-ring' to their global values to protect from
	updating by `read-from-minibuffer' (bug#9185).

2011-08-25  Juri Linkov  <juri@jurta.org>

	* textmodes/ispell.el (ispell-command-loop): Add newline
	at the end of the "Use option `i'..." line.

2011-08-25  Juri Linkov  <juri@jurta.org>
