@@ -1,3 +1,7 @@
+2011-08-28  Chong Yidong  <cyd@stupidchicken.com>
+
+	* server.el (server-port): Doc fix.
+
 2011-08-28  Alan Mackenzie  <acm@muc.de>
 
 	* progmodes/cc-fonts.el
